[package]
name = "plotters-gtk4"
version = "0.4.0"
description = "Plotters GTK4 Backend"
homepage = "https://github.com/SeaDve/plotters-gtk4"
repository = "https://github.com/SeaDve/plotters-gtk4"
documentation = "https://docs.rs/plotters-gtk4"
authors = ["Dave Patrick Caberto"]
categories = ["visualization", "gui"]
keywords = ["gtk", "gtk4", "visualization", "plotting", "drawing"]
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
gtk = { version = "0.8", package = "gtk4", features = ["v4_14"] }
pangocairo = "0.19"
plotters-backend = "0.3"
